<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filterHiddenFile"
        android:checkable="true"
        android:icon="@drawable/icon_filter_hidden_file"
        android:title="@string/filter_hidden_file"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newWindow"
        android:icon="@drawable/ic_baseline_add_to_photos_24"
        android:title="@string/new_window"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/baseline_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/plugin_manager"
        android:icon="@drawable/baseline_extension_24"
        android:title="@string/plugin_manager" />
    <item
        android:id="@+id/remote_manager"
        android:icon="@drawable/baseline_cloud_24"
        android:title="@string/remote_access" />
    <item
        android:id="@+id/open_root_access"
        android:icon="@drawable/ic_baseline_android_24"
        android:title="@string/root_access" />
    <item
        android:id="@+id/background_task"
        android:title="@string/background_task_manage" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about" />
    <item
        android:id="@+id/open_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>